--- a/WaifuGuards/WaifuGuards.vbproj
+++ b/WaifuGuards/WaifuGuards.vbproj
@@ -73,7 +73,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NameList.vb" />
+    <Compile Include="WaifuList.vb" />
     <Compile Include="Waifu.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
