--- a/WaifuGuards/WaifuGuards.vbproj
+++ b/WaifuGuards/WaifuGuards.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E5E767C2-933C-484E-82C7-9AB32BB0738B}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>WaifuGuards</RootNamespace>
+    <RootNamespace>GTA.WaifuGuards</RootNamespace>
     <AssemblyName>WaifuGuards</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
