--- a/WaifuGuards/WaifuGuards.vbproj
+++ b/WaifuGuards/WaifuGuards.vbproj
@@ -73,6 +73,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\AssistPlayer.vb" />
     <Compile Include="Events\FollowPlayer.vb" />
     <Compile Include="Waifu.vb" />
     <Compile Include="Utils.vb" />
