--- a/NearbyPeds/NearbyPeds.vbproj
+++ b/NearbyPeds/NearbyPeds.vbproj
@@ -68,6 +68,7 @@
     <Reference Include="ScriptHookVDotNet2, Version=2.10.7.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\ScriptHookVDotNet\ScriptHookVDotNet2.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
