--- a/GTA5CinematicCamera/GTA5CinematicCamera.vbproj
+++ b/GTA5CinematicCamera/GTA5CinematicCamera.vbproj
@@ -70,6 +70,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CameraScript.vb" />
+    <Compile Include="Timer.vb" />
+    <Compile Include="SplineCamera.vb" />
     <Compile Include="Utils.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
