add a basically protocol handler

--- a/MultiplexPlayer/Protocols/Protocols.vbproj
+++ b/MultiplexPlayer/Protocols/Protocols.vbproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A526B34F-25CF-43A3-AA1F-3553253C786E}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Protocols</RootNamespace>
-    <AssemblyName>Protocols</AssemblyName>
+    <RootNamespace>GTA5.Multiplex</RootNamespace>
+    <AssemblyName>GTA5.Multiplex.Protocols</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
@@ -19,7 +19,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>Protocols.xml</DocumentationFile>
+    <DocumentationFile>GTA5.Multiplex.Protocols.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -28,7 +28,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>Protocols.xml</DocumentationFile>
+    <DocumentationFile>GTA5.Multiplex.Protocols.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
