--- a/MultiplexPlayer/scripts/MultiplexPlayer.vbproj
+++ b/MultiplexPlayer/scripts/MultiplexPlayer.vbproj
@@ -65,6 +65,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ScriptHookVDotNet2">
+      <HintPath>..\..\ScriptHookVDotNet\ScriptHookVDotNet2.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
