--- a/MultiplexPlayer/Server/Server.vbproj
+++ b/MultiplexPlayer/Server/Server.vbproj
@@ -95,6 +95,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UsersMgr.vb" />
     <Compile Include="GTA5Multiplex.vb" />
     <Compile Include="Program.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
