--- a/MultiplexPlayer/scripts/MultiplexPlayer.vbproj
+++ b/MultiplexPlayer/scripts/MultiplexPlayer.vbproj
@@ -124,5 +124,15 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Protocols\Protocols.vbproj">
+      <Project>{a526b34f-25cf-43a3-aa1f-3553253c786e}</Project>
+      <Name>Protocols</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VB\47-dotnet_Microsoft.VisualBasic.vbproj">
+      <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
+      <Name>47-dotnet_Microsoft.VisualBasic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
