netowkr user model

--- a/MultiplexPlayer/scripts/MultiplexPlayer.vbproj
+++ b/MultiplexPlayer/scripts/MultiplexPlayer.vbproj
@@ -88,6 +88,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GamePlays.vb" />
     <Compile Include="UserMenu.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
