c/s generic message model

--- a/MultiplexPlayer/Protocols/Protocols.vbproj
+++ b/MultiplexPlayer/Protocols/Protocols.vbproj
@@ -85,6 +85,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Message.vb" />
     <Compile Include="CSNetwork.vb" />
     <Compile Include="PlayerControls.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
