--- a/MultiplexPlayer/Server/Server.vbproj
+++ b/MultiplexPlayer/Server/Server.vbproj
@@ -119,9 +119,10 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.vb" />
     <Compile Include="NetworkUser.vb" />
-    <Compile Include="UsersMgr.vb" />
-    <Compile Include="GTA5Multiplex.vb" />
+    <Compile Include="Modules\UsersMgr.vb" />
+    <Compile Include="Modules\GTA5Multiplex.vb" />
     <Compile Include="Program.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
